@@ -174,6 +174,7 @@ Output Builtin Functions
 Variable Access Builtin Functions
 \[bu] \fB@cast\fR (variable, "type_name"[, "module"])
 \[bu] \fB@defined\fR (variable)
+\[bu] \fB@probewrite\fR (variable)
 .ESAMPLE
 
 Probepoints
