@@ -1,0 +1,7 @@
+int test (int a) {
+  return a;
+}
+
+int main (void) {
+  return test(0);
+}
