@@ -271,6 +271,7 @@ struct c_unparser: public unparser, public visitor
   void visit_autocast_op (autocast_op* e);
   void visit_atvar_op (atvar_op* e);
   void visit_defined_op (defined_op* e);
+  void visit_probewrite_op(probewrite_op* e);
   void visit_entry_op (entry_op* e);
   void visit_perf_op (perf_op* e);
 
@@ -5660,6 +5661,13 @@ void
 c_unparser::visit_defined_op (defined_op* e)
 {
   throw SEMANTIC_ERROR(_("cannot translate general @defined expression"), e->tok);
+}
+
+
+void
+c_unparser::visit_probewrite_op (probewrite_op* e)
+{
+  throw SEMANTIC_ERROR(_("cannot translate general @probewrite expression"), e->tok);
 }
 
 
